# pyflycli

./: .env  .gitignore  README.md  foo_two.db  post.html  pyproject.toml  requirements.txt  test.db
pyfly/: __init__.py  __main__.py  cli.py  config.py  database.py  pyfly.py
src/aviation/: __init__.py  cli.py  config.py  database.py  errors.py  fake_models.py  main.py  pyfly.py  utils.py
tests/: test_aviation.py
