[tool.poetry]
name = "aviation"
version = "0.1.0"
description = ""
authors = ["k-zehnder <kjzehnder3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
SQLAlchemy = "^1.4.31"
sqlmodel = "^0.0.6"
asyncpg = "^0.25.0"
mypy = "^0.931"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "aviation.pyfly:main"