[tool.poetry]
name = "aviation"
version = "0.1.0"
description = ""
authors = ["k-zehnder <kjzehnder3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
SQLAlchemy = "^1.4.31"
sqlmodel = "^0.0.6"
asyncpg = "^0.25.0"
mypy = "^0.931"
rich = "^11.2.0"
asyncer = "^0.0.1"
anyio = "^3.5.0"
aiosqlite = "^0.17.0"
databases = "^0.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyfly = "aviation.pyfly:pyfly"